# DGA-Detection

./: README.md  app.py  dockerfile.yml  fastapi_app.py  main.py  pyproject.toml  requirements.txt  vercel.json  wrangler.toml
ML_v2/: dga_config.pickle  dga_lstm_attention_model.h5  dga_tokenizer.pickle  lstm_url.ipynb
models/: bert.py
templates/: index.html
web-app/: README.md  dockerfile.yml  main.py  pyproject.toml  requirements.txt
