[project]
name = "web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "jinja2>=3.1.2",
    "matplotlib>=3.5.3",
    "pydantic>=1.10.7",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.0.2",
    "seaborn>=0.12.2",
    "tensorflow==2.16.2",
    "uvicorn>=0.21.0",
]
